<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Story App</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_input_is_not_valid">The input is not valid</string>
    <string name="password_not_greater_6">Password length must be greater than 6</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="fragment_login">Login</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="poster">poster</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_story">Add Story</string>
    <string name="login_page">Login Page</string>
    <string name="description">Description</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="preview_image_view">Preview Image View</string>
    <string name="ambil_foto">Take photo first</string>
    <string name="permission">Don\'t have permission</string>
    <string name="gagal_ambil_gambar">Failed take picture</string>
    <string name="gagal_muncul_kamera">Failed show camera.</string>
    <string name="input_tidak_boleh_kosong">Input must filled</string>
    <string name="email_tidak_valid">Invalid email</string>
    <string name="panjang_wajib_6">Password must greater than 6 character</string>
    <string name="take_photo">Take photo</string>
    <string name="login">Login</string>
    <string name="detail">Detail</string>
    <string name="gallery_photo">Galery Photo</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_camera">From Camera</string>
    <string name="map">Map</string>
    <string name="google_map">Google Map</string>
    <string name="retry">Retry</string>
    <string name="fab">fab</string>
    <string name="lat_short">Lat : %1$s</string>
    <string name="long_short">Long : %1$s</string>
</resources>