<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.storyapp.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_FirstFragment_to_addStoryFragment"
            app:destination="@id/addStoryFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.storyapp.login.LoginActivity"
        android:label="@string/login_page"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.storyapp.main.MainActivity"
        android:label="@string/app_name"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/addStoryFragment"
        android:name="com.example.storyapp.addStory.AddStoryFragment"
        android:label="@string/add_story"
        tools:layout="@layout/fragment_add_story" >
        <action
            android:id="@+id/action_addStoryFragment_to_FirstFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_addStoryFragment_to_cameraFragment"
            app:destination="@id/cameraFragment" />
    </fragment>
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.example.storyapp.camera.CameraFragment"
        android:label="@string/take_photo"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_cameraFragment_to_addStoryFragment"
            app:destination="@id/addStoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.storyapp.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
        <argument
            android:name="story"
            app:argType="com.example.storyapp.model.StoryModel" />
    </fragment>
</navigation>